--- a/style.css
+++ b/style.css
@@ -805,6 +805,10 @@ h3 {
     margin-top: 50px;
 }
 
+#form_1 .cta-hero {
+    color:#575757!important;
+}
+
 .avatar {
     box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
 }
